# antests

./: .gitignore
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 34d8ab4b0ac0_answers_and_topic_competency.py  5fbd7bf6cf25_test_sessions_and_questions.py  a8d38670501a_users_and_daily_usage.py  d5ff3d243d7b_open_questions_rubric_answer_text_.py
backend/app/: deps.py  main.py
backend/app/assessment/: competency.py  open_eval.py  recommendation.py  router.py  schemas.py  scoring.py  service.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  models.py
backend/app/generation/: generator.py  open_seed.py  openai_client.py  planner.py  router.py  schemas.py  service.py  topics.py
backend/app/overview/: router.py
backend/tests/: conftest.py  test_adaptive_wiring.py  test_artifact_level.py  test_artifact_ref_drop.py  test_assessment_api.py  test_assessment_service.py  test_auth_login.py  test_auth_register.py  test_competency.py  test_config.py  test_cors.py  test_daily_usage.py  test_generation_schemas.py  test_generator.py  test_multi_quota.py  test_multi_topup.py  test_open_assembly.py  test_open_assessment.py  test_open_eval.py  test_open_generation.py  test_open_schemas.py  test_open_seed.py  test_open_stem.py  test_openai_client.py  test_overview_api.py  test_planner.py  test_recommendation.py  test_scoring.py  test_security.py  test_sessions_api.py  test_topics.py
docs/: DEPLOY-RAILWAY.md
frontend/: .env.local.example  (+4 more)
(+48 files in other folders)
